compiler code with auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 app.base.url=http://www.technohunk.in
-server.port=555
+server.port=9000
+python.version.command=python3.7
+auth.code=2B79DB97D2DB437893381CEB9B019D19
