compiler code with auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 app.base.url=http://www.technohunk.in
 server.port=8080
 python.version.command=python3.7
+#python.version.command=py
 auth.code=2B79DB97D2DB437893381CEB9B019D19
