--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8080
 python.version.command=python3.7
 #python.version.command=py
 auth.code=2B79DB97D2DB437893381CEB9B019D19
+
+server.ssl.key-alias=cubic_server
+server.ssl.key-store-password=root@123
+server.ssl.key-store=classpath:clevered_keystore.p12
+server.ssl.key-store-type=PKCS12
