Fix for graph in compiler code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,17 @@ server.port=8080
 python.version.command=python3.7
 #python.version.command=py
 auth.code=2B79DB97D2DB437893381CEB9B019D19
+# In properties file
+debug=true
+# Output to a temp_folder/file
+logging.file=/tmp/logs/application.log
+logging.level.org.springframework=ERROR 
+logging.level.com.clevered=TRACE
+ 
+#logging.path=/my-folder/
+ 
+# Logging pattern for file
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
 
 #server.ssl.key-alias=cubic_server
 #server.ssl.key-store-password=root@123
