--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,17 @@ logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %
 #server.ssl.key-store-password=root@123
 #server.ssl.key-store=classpath:clevered_keystore.p12
 #server.ssl.key-store-type=PKCS12
+
+#This is for spring boot 2.x
+spring.datasource.url=jdbc:mysql://localhost:3306/rab3tech1000
+spring.datasource.username=root
+spring.datasource.password=mysql@1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#Create schema/ automatically
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
