added three compiler output url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %
 #server.ssl.key-store-password=root@123
 #server.ssl.key-store=classpath:clevered_keystore.p12
 #server.ssl.key-store-type=PKCS12
+
+flask.clevered.home=https://flask.clevered.com/home.html
+flask.clevered.index=https://flask.clevered.com/index.html
+flask.clevered.first.home=https://flask.clevered.com/first_home.html
+flask.clevered.second.home=https://flask.clevered.com/second_home.html
